# shadowmere

./: .dockerignore  .env.example  .env.shadowtest.example  .gitignore  Dockerfile  README.md  countries.py  docker-compose.dev.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  codeql.yml  django.yml  docker-image.yml  docker-pr.yml
app/shadowmere/: manage.py
app/shadowmere/apps/proxylist/: admin.py  apps.py  metrics.py  models.py  pagination.py  permissions.py  serializers.py  signals.py  tasks.py  views.py
app/shadowmere/config/: asgi.py  urls.py  wsgi.py
app/shadowmere/config/settings/: base.py  dev.py  prod.py
app/shadowmere/utils/: proxy.py  uri_scheme.py  validators.py
docker/: wait_for_migration.sh
docker/celery/beat/: start
docker/celery/worker/: start
docker/dev/: Dockerfile  entrypoint  start
docker/prod/: Dockerfile
locale/es/LC_MESSAGES/: django.mo
proxylist/: admin.py  apps.py  base64_decoder.py  metrics.py  models.py  pagination.py  permissions.py  proxy.py  scheduled_tasks.py  serializers.py  tasks.py  tests.py  tests_proxy.py  views.py
proxylist/fixtures/: proxies.json  subscriptions.json
proxylist/management/commands/: cleanup_urls.py  clear_stats.py  initadmin.py  poll_subscriptions.py  reduce_checks_by.py  remove_low_quality.py  update_status.py
proxylist/migrations/: 0001_initial.py  0002_proxy_last_active.py  0003_alter_proxy_url.py  0004_proxy_times_check_failed_proxy_times_checked.py  0005_remove_proxy_times_check_failed.py  0006_proxy_times_check_succeeded.py  0007_proxy_ip_address_proxy_location_country_code.py  0008_proxy_location_country_alter_proxy_url.py  0009_proxy_port.py  0010_subscription_alter_proxy_url.py  0011_alter_subscription_kind.py  0012_subscription_alive_subscription_enabled.py  0014_tasklog.py  0015_alter_tasklog_start_time.py  0018_delete_tasklog.py  0019_blacklisthost.py  0020_add_indexes_for_filtered_fields.py
proxylist/tests/: test_country_codes.py  test_proxies.py  test_subscription.py  test_subscriptions.py  test_tasks.py
proxylist/views/: __init__.py  config_file.py  country_api.py  healthcheck.py  html_proxy_list.py  port_api.py  proxy_api.py  qr_code.py  ratelimit.py  subscription_api.py
shadowmere/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
shadowmere/settings/: base.py  prod.py
templates/: index.html
testssproxy/: Dockerfile  sstest
(+26 files in other folders)
